--- a/css/fonts.css
+++ b/css/fonts.css
@@ -11,26 +11,45 @@
   font-display: block;
 }
 
-/* 
-@font-face {
-  font-family: "AaarghRegular";
-  src: url("../fonts/AaarghRegular/AaarghRegular.eot");
-  src: url("../fonts/AaarghRegular/AaarghRegular.eot?#iefix")format("embedded-opentype"),
-  url("../fonts/AaarghRegular/AaarghRegular.woff") format("woff"),
-  url("../fonts/AaarghRegular/AaarghRegular.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
 
 @font-face {
-  font-family: "AaarghBold";
-  src: url("../fonts/AaarghBold/AaarghBold.eot");
-  src: url("../fonts/AaarghBold/AaarghBold.eot?#iefix")format("embedded-opentype"),
-  url("../fonts/AaarghBold/AaarghBold.woff") format("woff"),
-  url("../fonts/AaarghBold/AaarghBold.ttf") format("truetype");
-  font-style: normal;
+  font-display: swap;
+  font-family: 'Poppins-Regular';
+  src: url('../fonts/Poppins/');
+  src: url('../fonts/Poppins/Poppins-Regular.eot');
+  src: url('../fonts/Poppins/Poppins-Regular.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Poppins/Poppins-Regular.ttf') format('truetype'),
+       url('../fonts/Poppins/Poppins-Regular.woff') format('woff'),
+       url('../fonts/Poppins/Poppins-Regular.woff2') format('woff2');
+  
   font-weight: normal;
-} */
+  font-style: normal;
+}
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins-SemiBold';
+  src: url('../fonts/Poppins/Poppins-SemiBold.eot');
+  src: url('../fonts/Poppins/Poppins-SemiBold.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Poppins/Poppins-SemiBold.ttf') format('truetype'),
+       url('../fonts/Poppins/Poppins-SemiBold.woff') format('woff'),
+       url('../fonts/Poppins/Poppins-SemiBold.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins-Bold';
+  src: url('../fonts/Poppins/Poppins-Bold.eot');
+  src: url('../fonts/Poppins/Poppins-Bold.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Poppins/Poppins-Bold.ttf') format('truetype'),
+       url('../fonts/Poppins/Poppins-Bold.woff') format('woff'),
+       url('../fonts/Poppins/Poppins-Bold.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
