--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ html {
   }
   
   body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins-Regular', sans-serif;
     font-size: 15px;
     color: #fff;
     font-weight: 400;
@@ -73,7 +73,7 @@ html {
   }
   
   .poppins-font {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins-Regular', sans-serif;
   }
   
   .open-sans-font {
@@ -395,7 +395,7 @@ to {
     overflow: hidden;
     display: inline-block;
     position: relative;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins-SemiBold', sans-serif;
     letter-spacing: .5px;
     border: 0;
   }
@@ -549,7 +549,7 @@ to {
       right: 27px;
       margin: 0;
       text-align: center;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Poppins-Regular', sans-serif;
       border-radius: 30px 0 0 30px;
     }
   }
@@ -1334,7 +1334,7 @@ to {
     }
   
     .btn.btn-about:before {
-      content: "\f007";
+      content: "\e90c";
     }
   
     .btn.btn-portfolio:before {
